--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "nuxt-boilerplate",
-  "private": false,
   "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
+    "lint": "eslint .",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "^3.9.3",
-    "vue": "^3.4.14",
-    "vue-router": "^4.2.5"
+    "@nuxt/eslint-config": "^0.2",
+    "eslint": "^8",
+    "nuxt": "^3",
+    "typescript": "^5",
+    "vue": "^3",
+    "vue-router": "^4",
+    "vue-tsc": "^1"
   },
   "packageManager": "yarn@4.0.2"
 }
